Fixed bug with avatar on mobile pages

--- a/STRoadMap/STRoadMap/Content/Profile.css
+++ b/STRoadMap/STRoadMap/Content/Profile.css
@@ -196,5 +196,10 @@ a.prof-button:hover {
         margin-top: 0;
         padding-top: 0;
     }
+    #profileImage {
+        width: 80% !important;
+        margin-left: 10% !important;
+        margin-top: 50px;
+    }
     
 }
